Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -62,20 +62,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-8a79ca6968cc>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-7-b018900d3559>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-8a79ca6968cc>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    palermo = neighborhoods '1'\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-b018900d3559>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    palermo = neighborhoods 1\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "palermo = neighborhoods "
+    "palermo = neighborhoods '1'"
    ]
   },
   {
