--- a/index.ipynb
+++ b/index.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca = None"
+    "la_boca = neighborhoods"
    ]
   },
   {
