Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -464,7 +464,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = None"
+    "recoleta_marker = print(len(neighborhood_markers)) # 5\n",
+    "print(neighborhood_markers[-1] == marker_five) # True"
    ]
   },
   {
