Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -464,8 +464,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = print(len(neighborhood_markers)) # 5\n",
-    "print(neighborhood_markers[-1] == marker_five) # True"
+    "recoleta_marker = None"
    ]
   },
   {
