--- a/index.ipynb
+++ b/index.ipynb
@@ -464,7 +464,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = None"
+    "recoleta_marker = neighborhood_markers"
    ]
   },
   {
