--- a/index.ipynb
+++ b/index.ipynb
@@ -460,11 +460,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = neighborhood_markers"
+    "recoleta_marker = neighborhood_markers[1]"
    ]
   },
   {
